@@ -269,6 +269,7 @@ i.default.values <- list(vertex=list(color="SkyBlue2",
                            label.color="darkblue",
                            arrow.size=1,
                            arrow.mode=i.get.arrow.mode,
+                           curved=FALSE,
                            arrow.width=1),
                          plot=list(layout=layout.random,
                            margin=c(0,0,0,0),
