@@ -1,3 +1,10 @@
+2008-11-03  Gabor Csardi  <csardi@szaffi>
+
+	* interfaces/R/igraph/R/plot.common.R (i.default.values) : 
+	added 'curved' edge parameter
+	* interfaces/R/igraph/R/plot.R (plot.igraph, igraph.Arrows) : 
+	added support for curved edges
+
 2008-11-02  Gabor Csardi  <csardi@szaffi>
 
 	* interfaces/R/igraph/R/conversion.R (get.incidence) : added
